--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -272,39 +272,33 @@ body {
     50%  { transform: translateY(-50px); }
     100% { transform: translateY(-30px); }
   }
+
+/* scroll bar for about me section  */
+/* Chrome, Edge, Safari */
+ .aboutme-scroll::-webkit-scrollbar {
+  width: 8px;
+}
+
+.aboutme-scroll::-webkit-scrollbar-track {
+  background: #1a1a1a; 
+  border-radius: 10px;
+}
+
+.aboutme-scroll::-webkit-scrollbar-thumb {
+  background-color: #00ffff;
+  border-radius: 10px;
+  border: 2px solid #1a1a1a;
+}
+
+/* Firefox */
+.aboutme-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #00ffff #1a1a1a;  
+} */
+
+
   
 
-  .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh; /* full height */
-    width: 250px;
-    background-color: #111;
-    overflow-y: auto; /* makes sidebar scrollable when content overflows */
-    padding: 20px 0;
-    box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
-  }
-  
-  /* Sidebar links */
-  .sidebar a {
-    display: block;
-    padding: 15px 20px;
-    color: #fff;
-    text-decoration: none;
-    transition: 0.3s;
-  }
-  
-  .sidebar a:hover {
-    background-color: #222;
-    color: #0ff;
-  }
-  
-  /* Main content area */
-  .main-content {
-    margin-left: 250px; /* push content right by sidebar width */
-    padding: 20px;
-  }
-  
+
     
   
