tech stack added

--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -233,7 +233,7 @@ body {
   
   .btn-resume:hover {
     background-color: #3ea543;
-    color: black;
+    color: rgb(34, 34, 194);
   }
 
   .button-wrapper {
